--- a/styles.css
+++ b/styles.css
@@ -720,7 +720,7 @@ body.mobile-menu-open .header-fixed {
   background: #f5f5f7;
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: top;
   scroll-snap-align: center;
   transition: transform 0.5s ease, box-shadow 0.5s ease;
 }
